argocd/apps/media/sabnzbd/manifests/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  labels:
    dns.homelabtech.net/provider: externaldns
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
  hostnames:
    - "sabnzbd.carsonanderson.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sabnzbd
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
